# zefe-solana-breakout-submission

./: README.md
zefe-backend-2025/: .env.db  .gitignore  Dockerfile.production  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  notes.txt  pyproject.toml  swagger.json
zefe-backend-2025/catalog/: bot.py  serializers.py  urls.py  views.py
zefe-backend-2025/catalog/telegram_bot/: handlers.py
zefe-backend-2025/core/: boto3.py  renderers.py  settings.py  swagger.py  urls.py  utils.py
zefe-backend-2025/core/services/: solana_service.py
zefe-backend-2025/events/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
zefe-backend-2025/events/middleware/: transaction_middleware.py
zefe-backend-2025/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userevent_code_alter_userevent_title.py  0004_usernetwork_scanned_event_title_and_more.py  0005_alter_baseevent_code_alter_baseevent_name.py  0006_spamreport_walletconnection_networkingrequest.py  0007_alter_networkingrequest_amount_staked_and_more.py  0008_create_notification_model.py  0009_delete_notification.py  0010_alter_networkingrequest_status.py  0011_networkingrequest_escrow_account_and_more.py
zefe-backend-2025/media/nginx/: nginx.conf
zefe-backend-2025/user/: admin.py  authentication.py  managers.py  models.py  serializers.py  telegram_helpers.py  urls.py  utils.py  views.py
zefe-backend-2025/user/migrations/: 0001_initial.py  0002_alter_user_photo_url.py  0003_userprofile_bio_userprofile_wallet_address.py  0004_userprofile_chain_ecosystem_and_more.py  (+4 more)
(+66 files in other folders)
