[package]
name = "zefe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zefe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1",features = ["init-if-needed"]}
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6.1"
getrandom = { version = "0.2", features = ["js"] }

